# fuel_tracker

./: .gitignore  Makefile  Makefile.python  Makefile.python.build  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: VW - Passat - 2015.csv  car information.csv  data.ods  data.xlsx  data_intrepid.csv  data_matrix.csv  data_passat.csv  data_soul.csv  kia-soul_4U-2010.ods  toyota-matrix-2003.ods  vw-passat-2015.ods
data/archive/: dodge-intrepid-1997.ods  vw-passat-2015.ods
data/csv/: Dodge - Intrepid - 1997.csv  Kia - Soul 4U - 2010.csv  Toyota - Matrix - 2003.csv  car information.ods
src/fuel_tracker/: command_bulk.py  command_fuel.py  command_report.py  command_vehicle.py  common.py  database.py  fueltracker.py  models.py  queries.py
