# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2021 Troy Williams

# uuid  : 69db7834-02b4-11ec-8c3c-c906c7d81bd1
# author: Troy Williams
# email : troy.williams@bluebill.net
# date  : 2021-08-21
# -----------

[metadata]
name = fueltracker
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = Track fuel receipts.
# url =
# long_description = file: README.md
# long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    tzdata
    click
    toml
    appdirs
    pandas
    records
    odfpy
    openpyxl
include_package_data = True
python_requires = >=3.9

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
[options.packages.find]
where = src

[options.entry_points]
console_scripts = ft=fuel_tracker.fueltracker:main
